# wrf-fire

./: ProbCalc.html  ProbCalcBinomial.html  README.txt  README_cvs.txt  StdNorm.html  WRFV3  env.csh  env.sh  fuels.m  go_wps  gowps.csh  license.txt  ros_balbi.m  test.file  test_ros_balbi.m  testfile.txt  testing_file_by_vk.F  wps.csh
WPS/: configure  configure-ubuntu-18-04  configure.wps.backup  geogrid_wrapper.sh  landfire.sh  namelist.wps  namelist.wps.fire  namelist.wps.fire.nested
WPS/arch/: Config.pl  configure.defaults  postamble  preamble
WPS/co_meadow_creek/: GEOGRID.TBL  namelist.input  namelist.wps
WPS/geogrid/: GEOGRID.TBL  GEOGRID.TBL.FIRE  GEOGRID.TBL.FIRE.NED  GEOGRID.TBL.FIRE.colibri  GEOGRID.TBL.FIRE.kingspeak
WPS/landfire/: convert_landfire.F90  landfire.sh  make
doc/: README_changes.txt  README_git.txt  README_mac.txt  README_matlab_netcdf.txt  README_regression_testing.txt  README_vis.txt  README_visualization.txt  README_wps.txt  jm_notes.txt
doc/tutorial_web/: Download.htm  Environment.htm  HansOnTutorial.htm  compile_run.htm  feedback.htm  var.htm  wps_arw.htm
docs/: ProbCalc.html  ProbCalcBinomial.html  StatCalc1Var.html  StatCalc2Var.html  StdNorm.html  index.html
matlab/: ignition.m  ignition3.m  line_dist.m
netcdf_write_matrix/src/: INSTALL  Makefile  README  aclocal.m4  ncconfig.in  rules.make
other/: pull  update
other/FetchData/: GeogridData.py  SeamlessServer.py  SourceDataDef.py  dataSources.py
other/Matlab/: startup.m
other/Vapor/: VaporSaved.vss  colormap_fire.vtf  fireflux-domain-scaled.txt  fireflux-domain.txt  fireflux_med_adam.vss
other/WPSGeoTiff/: Makefile  README  convert_geotiff.c  geogrid_index.h  geogrid_tiles.c  geogrid_tiles.h  read_geotiff.c  read_geotiff.h  tester.c  write_geogrid.c
other/convert_to_geogrid/: fetch_data.py  geogrid.py  geogrid_wrapper.py  namelist.py  print_control.py  source_data.py
other/export/: wrf_export_patch.sh
other/landfire/: convert_landfire.F90  make_test_data.F90
other/lfn_history_api/: Makefile  lfn_history.F90  lfn_history.m  lfn_test.F90  lfn_test.m
other/netcdf_crop/: Makefile  netcdf_crop.F
other/netcdf_diff/: Makefile  README.txt  compile_nco.sh  netcdf_diff.F90
other/netcdf_write_matrix/src/: README_WRITE_MATRIX  RELEASE_NOTES  config.h  config.status  configure  configure.in  macros.make  macros.make.in
other/netcdf_write_matrix/src/cxx/: example.c  nctst.cpp  ncvalues.cpp  netcdf.cpp  ref_nctst_64bit_offset.cdl
other/netcdf_write_matrix/src/f90/: Makefile  netcdf_attributes.f90
other/netcdf_write_matrix/src/fortran/: Makefile  fort-control.c  fort-v2compat.c  ncfortran.h  netcdf.3f  nfconfig.inc
other/netcdf_write_matrix/src/libsrc/: Makefile  error.c  libvers.c  nc.c  ncx.c  ncx.m4  netcdf.3  putget.m4  t_ncxx.c  v1hpg.c  v2i.c
other/netcdf_write_matrix/src/man/: Makefile  netcdf-c.texi  netcdf-cxx.texi  netcdf-f77.texi  netcdf-f90.texi  netcdf.m4  netcdf.texi
other/netcdf_write_matrix/src/nc_test/: large_files.c  nc_test.c  quick_large_files.c  test_read.c  tests.h  util.c
other/netcdf_write_matrix/src/ncdump/: Makefile  dumplib.c  dumplib.h  run_tests.sh  tst_lengths.sh  vardata.c  vardata_write.c
other/netcdf_write_matrix/src/ncgen/: genlib.c  main.c  ncgen.l  ncgen.y
other/netcdf_write_matrix/src/nctest/: Makefile  atttests.c  cdftests.c  dimtests.c  driver.c  misctest.c  rec.c  tests.h  varget.c  vargetg.c  varput.c  vartests.c
other/netcdf_write_matrix/src/nf_test/: Makefile  ftest.F  nf_test.F  tests.inc
other/netcdf_write_matrix/src/win32/NET/: config.h
other/netcdf_write_matrix/src/win32/NET/examples/: Form1.h  tst_netcdf.vcproj
other/netcdf_write_matrix/src/win32/NET/nc_test/: large_files.vcproj  nc_test.vcproj
other/netcdf_write_matrix/src/win32/NET/ncdump/: ncdump.vcproj
other/netcdf_write_matrix/src/win32/NET/ncgen/: ncgen.vcproj
other/netcdf_write_matrix/src/win32/NET/nctest/: nctest.vcproj
other/regressiontest/: env.sh  met_em.d01.2005-08-28_12:00:00.nc  met_em.d01.2005-08-28_18:00:00.nc  namelist.ideal  namelist.input.std  namelist.real  regtest.sh  regtest_wf.sh
other/tign_history_api/: Makefile  tign_history.F90  tign_history.m  tign_test.F90  tign_test.m
standalone/: Makefile  README.txt  README_fmc.txt  atm.F  burn_test_main.F  commit_hash  config_assigns.inc  core_test_main.F  equilibrium_moisture.m  fire.F  fire.py  fire_input.nc  fuel_interp_test_main.F  fuels_main.F  init.F  make.inc  make.inc.gfortran  make.inc.ifort  make.inc.pgf90  make_moisture_input.m  make_rain_input.m  model_test_init.F  model_test_main.F  module_configure.F  module_domain.F  moisture_input.txt  moisture_main.F  moisture_test_main.F  namelist.fire  namelist.fire.template  namelist.input.template  namelist_defaults.inc  namelist_defines.inc  namelist_defines2.inc  namelist_statements.inc  random_fire.py  run_moisture_test.m  startup.m  util_netcdf.F  wrf_fakes.F  (+2 more)
standalone/matlab/: fuel_burnt.m  fuel_burnt_debug.m  fuel_burnt_fd.m  fuel_test.m  get_diff.m  level_test.m  next_mat.m  prop_ls_ros.m  prop_test.m  read_m.m  read_model_test_out.m
standalone/old/: fuel_burnt_test.F  model_netcdf_main.F  normal_spread.F  prop_test_main.F  util_test_main.F
ver/: README.txt  check_ver  make_ver
wrfv2_fire/: Makefile  README  README_jc_jm_newmodel  changes-to-make-in-wrf.patton  clean  compile  compile_fire  configure  configure.wrf.backup  configure.wrf.cheyenne  configure.wrf.intel.debug  configure.wrf.intel.serial  configure.wrf.kingspeak  configure_auto  fire_patch_01.tar  foo.f  running_wrf_on_cheyenne.txt  wrf
wrfv2_fire/Registry/: .registry.chem.swp  Registry.EM  Registry.EM_CHEM  Registry.EM_COMMON  Registry.EM_NL  Registry.EM_SST  Registry.backup  Registry.wrfvar  registry.chem  registry.fire  registry.fire_sfc_hypgrid
wrfv2_fire/arch/: Config_new.pl  configure.defaults  configure.defaults_nompi  configure_new.defaults  configure_new.defaults.local  postamble  postamble_new
wrfv2_fire/chem/: chem_driver.F  chemics_init.F  module_aerosols_sorgam.F  module_gocart_seasalt.F  module_mosaic_cloudchem.F
(+776 files in other folders)
